# gRPC-Service

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gRPC-Service.cpp  gRPC-Service.h
docs/html/: _c_1_2_users_2vladcrim_2source_2repos_2g_r_p_c-_service_2src_2logger_8cpp-example.html  _c_1_2_users_2vladcrim_2source_2repos_2g_r_p_c-_service_2src_2logger_8h-example.html  annotated.html  annotated_dup.js  cache_8cpp.html  cache_8h.html  cache_8h_source.html  class_cache-members.html  class_cache.html  class_cache.js  class_logger-members.html  class_logger.html  class_logger.js  class_telemetry_service_impl-members.html  class_telemetry_service_impl.html  class_telemetry_service_impl.js  class_validator-members.html  class_validator.html  class_validator.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  examples.html  examples.js  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  logger_8cpp.html  logger_8h.html  logger_8h.js  logger_8h_source.html  main_8cpp.html  main_8cpp.js  navtreedata.js  (+8 more)
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  classes_2.js  files_0.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
docs/latex/: _c_1_2_users_2vladcrim_2source_2repos_2g_r_p_c-_service_2src_2logger_8cpp-example.tex  _c_1_2_users_2vladcrim_2source_2repos_2g_r_p_c-_service_2src_2logger_8h-example.tex  annotated.tex  cache_8cpp.tex  cache_8h.tex  cache_8h_source.tex  class_cache.tex  class_logger.tex  class_telemetry_service_impl.eps  class_telemetry_service_impl.tex  class_validator.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dirs.tex  examples.tex  files.tex  hierarchy.tex  logger_8cpp.tex  logger_8h.tex  logger_8h_source.tex  main_8cpp.tex  refman.tex  telemetry__service_8cpp.tex  telemetry__service_8h.tex  telemetry__service_8h_source.tex  validator_8cpp.tex  validator_8h.tex  validator_8h_source.tex
proto/: telemetry.proto
src/: cache.cpp  cache.h  logger.cpp  logger.h  main.cpp  telemetry_service.cpp  telemetry_service.h  validator.cpp  validator.h
unit_tests/: test_cache.cpp  test_logger.cpp  test_telemetry_service.cpp  test_validator.cpp
